examples/test/testpolicy9988.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9988
  namespace: namespace339
spec:
  podSelector:
    matchLabels:
      key6: value18
      key17: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value47
      podSelector:
        matchLabels:
          key30: value23
          key49: value41
          key1: value37
